♻️refactor: orchestrateCompletion 내부 메소드 Propagation.REQUIRES_NEW 정의